--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "scripts": {
     "vscode:prepublish": "pnpm run package",
+    "build": "vsce package",
     "compile": "pnpm run check-types && pnpm run lint && node esbuild.js",
     "watch": "npm-run-all -p watch:*",
     "watch:esbuild": "node esbuild.js --watch",
@@ -84,5 +85,12 @@
   "packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab",
   "dependencies": {
     "@vscode/codicons": "^0.0.36"
+  },
+  "vsce": {
+    "dependencies": false
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mikelei8291/TODO.md.git"
   }
 }
