--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
     "esbuild": "^0.24.0",
+    "esbuild-plugin-copy": "^2.1.1",
     "eslint": "^9.16.0",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.7.2"
