build: exclude new esbuild script path when building the extension

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -5,7 +5,7 @@ node_modules/**
 src/**
 .gitignore
 .yarnrc
-esbuild.js
+esbuild.mjs
 vsc-extension-quickstart.md
 **/tsconfig.json
 **/eslint.config.mjs
