--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   },
   "scripts": {
     "vscode:prepublish": "pnpm run package",
-    "build": "vsce package",
+    "build": "rm -rf dist && vsce package",
     "compile": "pnpm run check-types && pnpm run lint && node esbuild.mjs",
     "watch": "npm-run-all -p watch:*",
     "watch:esbuild": "node esbuild.mjs --watch",
@@ -65,6 +65,7 @@
     "test": "vscode-test"
   },
   "devDependencies": {
+    "@chialab/esbuild-plugin-html": "^0.18.2",
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
     "@types/vscode": "^1.54.0",
@@ -73,7 +74,6 @@
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
     "esbuild": "^0.24.0",
-    "esbuild-plugin-copy": "^2.1.1",
     "eslint": "^9.16.0",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.7.2"
